--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,44 @@
-certifi==2018.4.16
+asn1crypto==0.24.0
+bcrypt==3.1.6
+certifi==2018.11.29
+cffi==1.11.5
 chardet==3.0.4
-click==6.7
+Click==7.0
+cryptography==2.5
 dash==0.36.0
 dash-core-components==0.43.0
+dash-daq==0.1.0
 dash-html-components==0.13.5
-dash-renderer==0.12.1
-decorator==4.3.0
+dash-renderer==0.17.0
+decorator==4.3.2
+enum34==1.1.6
 Flask==1.0.2
 Flask-Compress==1.4.0
-gunicorn==19.8.1
-idna==2.6
+functools32==3.2.3.post2
+gunicorn==19.9.0
+heroku==0.1.4
+idna==2.8
+ipaddress==1.0.22
 ipython-genutils==0.2.0
-itsdangerous==0.24
+itsdangerous==1.1.0
 Jinja2==2.10
 jsonschema==2.6.0
 jupyter-core==4.4.0
-MarkupSafe==1.0
+MarkupSafe==1.1.0
 nbformat==4.4.0
-pandas==0.22.0
-plotly==2.5.1
-pytz==2018.4
-
-six==1.11.0
+paramiko==2.4.2
+plotly==3.6.0
+pyasn1==0.4.5
+pycparser==2.19
+PyNaCl==1.3.0
+python-dateutil==1.5
+pytz==2018.9
+requests==2.21.0
+retrying==1.3.3
+scp==0.13.0
+six==1.12.0
 traitlets==4.3.2
-
+urllib3==1.24.1
+virtualenv==16.3.0
 Werkzeug==0.14.1
+xlrd==1.2.0
